--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,3 @@
-* {
-  text-align: center;
-}
-tr {
-  border-bottom: 1px solid #ddd;
-}
-.pagination {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-}
-li{
-  padding: 5px;
-  border: 1px solid #ddd;
-  margin: 2px;
-  width: 20px;
-}
-li.active {
-  background-color: #3f51b5;
-  color: #fff;
+.App{
+  margin: 10px;
 }
